# 3dmodelofhumanbody

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
assets/: arm.txt  head.txt  leg.txt  torso.txt
config/: collors.conf
